# brainco-revo2-hand-control

./: .gitignore  README.md  mirror.py  server.py  studio_engine.py  test.py
.github/workflows/: release.yml
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  brand.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src/components/: DeviceMenu.tsx  HandVisual.tsx  Sidebar.tsx  TopBar.tsx
app/src/hooks/: useHandCamera.ts
app/src/lib/: cameraStore.ts  codeRunner.ts  devStore.ts  download.ts  engine.ts  handTracking.ts  learnContent.ts  learnStore.ts  license.ts  pca.ts  protocol.ts  store.ts
app/src/screens/: Activate.tsx  Camera.tsx  Control.tsx  Develop.tsx  Learn.tsx  Setup.tsx
app/src/styles/: index.css
brainco-hand-sdk/: .gitignore  CHANGELOG.md  README.md  README.zh.md  download-lib.sh
brainco-hand-sdk/archive/linux/: README.md  README.zh.md
brainco-hand-sdk/c/common/: stark_common.cpp  stark_common.h
brainco-hand-sdk/python/: README.md  README.zh.md  common_imports.py  install_whl.sh  requirements.txt
engine/: __init__.py  app.py  protocol.py  requirements.txt  run.py
engine/devices/: __init__.py  base.py  revo2.py  simulator.py
legacy/: README.md  inspire_config.json  mirror.py  server.py  start_server.command  test.py
legacy/static/: index.html
scripts/: build-sidecar.sh  dev.sh  fetch-camera-assets.sh  mint-license.mjs
static/: index.html
static/js/: main.js
(+50 files in other folders)
