[package]
name = "robostore-studio"
version = "0.1.0"
description = "RoboStore Studio — control, learn, and develop with your hand."
authors = ["RoboStore"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "robostore_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
